--- a/views/pages/food.ejs
+++ b/views/pages/food.ejs
@@ -48,17 +48,19 @@
                                         <img src=<%= foods[index]['Images Attached']%> />
                                     </div>
                                     <div class="card-body">
-                                    <h2 class="font-black" id="content"><%= foods[index]['Title']%></h2>  
-                                    <p class="font-black" id="content"><%= foods[index]['Description'] %></p>
-                                    <% var link = foods[index]['Link']%>
-                                    <% var card_state = 'buttoncard'%>
-                                    <% if(!link){%>
-                                        <% link = '#'%>
-                                        <% card_state = 'disabled_buttoncard'%>
-                                    <% } %>
-                                    <input type = "hidden" name = "varId" id = "varId" value=<%= varId%>>
-                                    <input type = "hidden" name = "Category" id = "Category" value ='Foods'>
-                                    <a href=<%= link%> onclick="return saveRecent('<%- varId%>')" target="_blank" class=<%= card_state%>>Check Food</a>
+                                        <h2 class="font-black" id="content"><%= foods[index]['Title']%></h2>  
+                                        <p class="font-black" id="content"><%= foods[index]['Description'] %></p>
+                                        <% var link = foods[index]['Link']%>
+                                        <% var card_state = 'buttoncard'%>
+                                        <% if(!link){%>
+                                            <% link = '#'%>
+                                            <% card_state = 'disabled_buttoncard'%>
+                                        <% } %>
+                                        <div id="link-buttons">
+                                            <input type = "hidden" name = "varId" id = "varId" value=<%= varId%>>
+                                            <input type = "hidden" name = "Category" id = "Category" value ='Foods'>
+                                            <a href=<%= link%> onclick="return saveRecent('<%- varId%>')" target="_blank" class=<%= card_state%>>Check Food</a>
+                                        </div>
                                     </div>
                                 </form>
                             </div>
