--- a/views/pages/search.ejs
+++ b/views/pages/search.ejs
@@ -25,82 +25,146 @@
                         <% var foods = foods %>
                         <% for (index in foods){%>
                             <div id="card-group">
-                                <div class="card-image">
-                                    <img src=<%= foods[index]['Images Attached']%> />
-                                </div>
-                                <div class="card-body">
-                                  <h2 class="font-black" id="title"><%= foods[index]['Title']%></h5>  
-                                  <p class="font-black" id="content"><%= foods[index]['Description'] %></p>
-                                  <% var link = foods[index]['Link']%>
-                                  <% var card_state = 'buttoncard'%>
-                                  <% if(!link){%>
-                                    <% link = '#'%>
-                                    <% card_state = 'disabled_buttoncard'%>
-                                  <% } %>
-                                  <a href=<%= link%> target="_blank" class=<%= card_state%>>Check Food</a>
-                                
-                                </div>
+                                <% var varId = foods[index]['_id'].toString()%>
+                                <form id=<%= varId%> name="save_recent" action = "/save_recent" method = "POST" target = "dummyFrame">
+                                    <div class="card-image">
+                                        <img src=<%= foods[index]['Images Attached']%> />
+                                    </div>
+                                    <div class="card-body">
+                                        <h2 class="font-black" id="content"><%= foods[index]['Title']%></h2>  
+                                        <p class="font-black" id="content"><%= foods[index]['Description'] %></p>
+                                        <% var link = foods[index]['Link']%>
+                                        <% var card_state = 'buttoncard'%>
+                                        <% if(!link){%>
+                                            <% link = '#'%>
+                                            <% card_state = 'disabled_buttoncard'%>
+                                        <% } %>
+                                        <div id="link-buttons">
+                                            <input type = "hidden" name = "varId" id = "varId" value=<%= varId%>>
+                                            <input type = "hidden" name = "Category" id = "Category" value ='Foods'>
+                                            <a href=<%= link%> onclick="return saveRecent('<%- varId%>')" target="_blank" class=<%= card_state%>>Check Food</a>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
+                            <script type="text/javascript">
+                                function saveRecent(id){
+                                    document.getElementById(id).submit();
+                                    return true;
+                                }
+                            </script>
+                            <iframe name = "dummyFrame" style="display: none;"></iframe>
                         <% } %>
                         <% var accommodations = accommodations %>
                         <% for (index in accommodations){%>
                             <div id="card-group">
-                                <div class="card-image">
-                                    <img src=<%= accommodations[index]['Images Attached']%> />
-                                </div>
-                                <div class="card-body">
-                                  <h2 class="font-black" id="title"><%= accommodations[index]['Title']%></h5>  
-                                  <p class="font-black" id="content"><%= accommodations[index]['Description'] %></p>
-                                  <% var link = accommodations[index]['Link']%>
-                                  <% var card_state = 'buttoncard'%>
-                                  <% if(!link){%>
-                                    <% link = '#'%>
-                                    <% card_state = 'disabled_buttoncard'%>
-                                  <% } %>
-                                  <a href=<%= link%> target="_blank" class=<%= card_state%>>Check Accommodation</a>
-                                
-                                </div>
+                                <% var varId = accommodations[index]['_id'].toString()%>
+                                <form id=<%= varId%> name="save_recent" action = "/save_recent" method = "POST" target = "dummyFrame">
+                                    <div class="card-image">
+                                        <img src=<%= accommodations[index]['Images Attached']%>>
+                                    </div>
+                                    <div class="card-body">
+                                        <h2 class="font-black" id="content"><%= accommodations[index]['Title']%></h2>
+                                        <p class="font-black" id="content"><%= accommodations[index]['Description']%></p>
+                                        <% var link = accommodations[index]['Link']%>
+                                        <!--Pls edit the card_state_location below to fetch map coordinates-->
+                                        <% var card_state_location = 'buttoncard_location'%>
+                                        <% if(!link){%>
+                                            <% link = '#'%>
+                                            <% var card_state = 'disabled_buttoncard'%>
+                                        <% } else { %>
+                                            <% var card_state = 'buttoncard'%>
+                                        <% } %>
+                                        <div id="link-buttons">
+                                            <a href=<%= link%> target="_blank" class=<%= card_state_location%>>Check Location</a>
+                                            <input type = "hidden" name = "varId" id = "varId" value=<%= varId%>>
+                                            <input type = "hidden" name = "Category" id = "Category" value ='Accommodations'>
+                                            <a href=<%= link%> onclick="return saveRecent('<%- varId%>')" target="_blank" class=<%= card_state%>>Check Accommodation</a>
+                                        </div>
+                                        
+                                    
+                                    </div>
+                                </form>
                             </div>
+                            <script type="text/javascript">
+                                function saveRecent(id){
+                                    document.getElementById(id).submit();
+                                    return true;
+                                }
+                            </script>
+                            <iframe name = "dummyFrame" style="display: none;"></iframe>
                         <% } %>
                         <% var places = places %>
                         <% for (index in places){%>
                             <div id="card-group">
-                                <div class="card-image">
-                                    <img src=<%= places[index]['Images Attached']%> />
-                                </div>
-                                <div class="card-body">
-                                  <h2 class="font-black" id="title"><%= places[index]['Title']%></h5>  
-                                  <p class="font-black" id="content"><%= places[index]['Description'] %></p>
-                                  <% var link = places[index]['Link']%>
-                                  <% var card_state = 'buttoncard'%>
-                                  <% if(!link){%>
-                                    <% link = '#'%>
-                                    <% card_state = 'disabled_buttoncard'%>
-                                  <% } %>
-                                  <a href=<%= link%> target="_blank" class=<%= card_state%>>Check Place</a>
-                                
-                                </div>
+                                <% var varId = places[index]['_id'].toString()%>
+                                <form id=<%= varId%> name="save_recent" action = "/save_recent" method = "POST" target = "dummyFrame">
+                                    <div class="card-image">
+                                        <img src=<%= places[index]['Images Attached']%>>
+                                    </div>
+                                    <div class="card-body">
+                                        <h2 class="font-black" id="content"><%= places[index]['Title']%></h2>
+                                        <p class="font-black" id="content"><%= places[index]['Description']%></p>
+                                        <% var link = places[index]['Link']%>
+                                        <!--Pls edit the card_state_location below to fetch map coordinates-->
+                                        <% var card_state_location = 'buttoncard_location'%>
+                                        <% if(!link){%>
+                                            <% link = '#'%>
+                                            <!-- NOTE: Change to disabled_buttoncard once links are complete -->
+                                            <% var card_state = 'buttoncard'%>
+                                        <% } else { %>
+                                            <% var card_state = 'buttoncard'%>
+                                        <% } %>
+                                        <div id="link-buttons">
+                                            <a href=<%= link%> target="_blank" class=<%= card_state_location%>>Check Location</a>
+                                            <input type = "hidden" name = "varId" id = "varId" value=<%= varId%>>
+                                            <input type = "hidden" name = "Category" id = "Category" value ='Places'>
+                                            <a href=<%= link%> onclick="return saveRecent('<%- varId%>')" target="_blank" class=<%= card_state%>>Check Place</a>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
+                            <script type="text/javascript">
+                                function saveRecent(id){
+                                    document.getElementById(id).submit();
+                                    return true;
+                                }
+                            </script>
+                            <iframe name = "dummyFrame" style="display: none;"></iframe>
                         <% } %>
                         <% var festivals = festivals %>
                         <% for (index in festivals){%>
                             <div id="card-group">
-                                <div class="card-image">
-                                    <img src=<%= festivals[index]['Images Attached']%> />
-                                </div>
-                                <div class="card-body">
-                                  <h2 class="font-black" id="title"><%= festivals[index]['Title']%></h5>  
-                                  <p class="font-black" id="content"><%= festivals[index]['Description'] %></p>
-                                  <% var link = festivals[index]['Link']%>
-                                  <% var card_state = 'buttoncard'%>
-                                  <% if(!link){%>
-                                    <% link = '#'%>
-                                    <% card_state = 'disabled_buttoncard'%>
-                                  <% } %>
-                                  <a href=<%= link%> target="_blank" class=<%= card_state%>>Check Festival</a>
-                                
-                                </div>
+                                <% var varId = festivals[index]['_id'].toString()%>
+                                <form id=<%= varId%> name="save_recent" action = "/save_recent" method = "POST" target = "dummyFrame">
+                                    <div class="card-image">
+                                        <img src=<%= festivals[index]['Images Attached']%> />
+                                    </div>
+                                    <div class="card-body">
+                                        <h2 class="font-black" id="content"><%= festivals[index]['Title']%></h2>  
+                                        <p class="font-black" id="content"><%= festivals[index]['Description'] %></p>
+                                        <% var link = festivals[index]['Link']%>
+                                        <% var card_state = 'buttoncard'%>
+                                        <% if(!link){%>
+                                            <% link = '#'%>
+                                            <!-- NOTE: Change to disabled_buttoncard once links are complete -->
+                                            <% var card_state = 'disabled_buttoncard'%>
+                                        <% } %>
+                                        <div id="link-buttons">
+                                            <input type = "hidden" name = "varId" id = "varId" value=<%= varId%>>
+                                            <input type = "hidden" name = "Category" id = "Category" value ='Festivals'>
+                                            <a href=<%= link%> onclick="return saveRecent('<%- varId%>')" target="_blank" class=<%= card_state%>>Check Festival</a>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
+                            <script type="text/javascript">
+                                function saveRecent(id){
+                                    document.getElementById(id).submit();
+                                    return true;
+                                }
+                            </script>
+                            <iframe name = "dummyFrame" style="display: none;"></iframe>
                         <% } %>
                     </div>
                 </div>
