Fixed(?) bug(?) in user hisotry.

--- a/views/pages/festivals.ejs
+++ b/views/pages/festivals.ejs
@@ -62,7 +62,7 @@ Discover the cultural treasures that bring Iloilo City to life. Unearth the capt
                                         <div id="link-buttons">
                                             <input type = "hidden" name = "varId" id = "varId" value=<%= varId%>>
                                             <input type = "hidden" name = "Category" id = "Category" value ='Festivals'>
-                                            <a href=<%= link%> onclick="return saveRecent('<%- varId%>')" target="_blank" class=<%= card_state%>>Check Festival</a>
+                                            <a href=<%= link%> onclick="return saveRecent('<%- varId%>')" target="_blank" class='buttoncard'>Check Festival</a>
                                         </div>
                                     </div>
                                 </form>
