--- a/views/pages/places-and-landmarks.ejs
+++ b/views/pages/places-and-landmarks.ejs
@@ -61,7 +61,7 @@
                                                 <a href=<%= link%> target="_blank" class=<%= card_state_location%>>Check Location</a>
                                                 <input type = "hidden" name = "varId" id = "varId" value=<%= varId%>>
                                                 <input type = "hidden" name = "Category" id = "Category" value ='Places'>
-                                                <a href=<%= link%> onclick="return saveRecent('<%- varId%>')" target="_blank" class=<%= card_state%>>Check Place</a>
+                                                <a href=<%= link%> onclick="return saveRecent('<%- varId%>')" target="_blank" class="buttoncard">Check Place</a>
                                             </div>
                                         </div>
                                     </form>
