--- a/views/pages/user.ejs
+++ b/views/pages/user.ejs
@@ -46,7 +46,7 @@
                                         <div id="link-buttons">
                                             <input type = "hidden" name = "varId" id = "varId" value=<%= varId%>>
                                             <input type = "hidden" name = "Category" id = "Category" value ='Places'>
-                                            <a href=<%= link%> onclick="return saveRecent('<%- varId%>')" target="_blank" class=<%= card_state%>>Check Place</a>
+                                            <a href=<%= link%> onclick="return saveRecent('<%- varId%>')" target="_blank" class="buttoncard">Check Place</a>
                                         </div>
                                     </div>
                                 </form>
@@ -122,7 +122,7 @@
                                         <div id="link-buttons">
                                             <input type = "hidden" name = "varId" id = "varId" value=<%= varId%>>
                                             <input type = "hidden" name = "Category" id = "Category" value ='Festivals'>
-                                            <a href=<%= link%> onclick="return saveRecent('<%- varId%>')" target="_blank" class=<%= card_state%>>Check Festival</a>
+                                            <a href=<%= link%> onclick="return saveRecent('<%- varId%>')" target="_blank" class='buttoncard'>Check Festival</a>
                                         </div>
                                     </div>
                                 </form>
