--- a/views/pages/search.ejs
+++ b/views/pages/search.ejs
@@ -18,7 +18,7 @@
 
             <div id="search-body">
                 <div id="search-header">
-                    <p class="font-white" id="title">Search results for <%= search%>:</p>
+                    <p class="font-black" id="title">Search results for <%= search%>:</p>
                 </div>
                 <div id="search-outputs">
                     <div id="wrap">
