--- a/views/pages/user.ejs
+++ b/views/pages/user.ejs
@@ -24,7 +24,7 @@
                     <p class="font-white">Profile History</p>
                 </div>
                 <div id="user_places">
-                    <p class="font-white" id="title">Here are the places you've visited</p>
+                    <p class="font-black" id="title">Here are the places you've visited</p>
                     <div id="wrap">
                         <% var place_history = place_history %>
                         <% for (index in place_history){%>
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div id="user_food">
-                    <p class="font-white" id="title">Here are the foods you've viewed</p>
+                    <p class="font-black" id="title">Here are the foods you've viewed</p>
                     <div id="wrap">
                         <% var food_history = food_history %>
                         <% for (index in food_history){%>
@@ -100,7 +100,7 @@
                     </div>
                 </div>
                 <div id="user_culture">
-                    <p class="font-white" id="title">Here are the festivals you've shown</p>
+                    <p class="font-black" id="title">Here are the festivals you've shown</p>
                     <div id="wrap">
                         <% var festival_history = festival_history %>
                         <% for (index in festival_history){%>
@@ -138,7 +138,7 @@
                     </div>
                 </div>
                 <div id="user_accommodation">
-                    <p class="font-white" id="title">Here are the accommodations you've looked</p>
+                    <p class="font-black" id="title">Here are the accommodations you've looked</p>
                     <div id="wrap">
                         <% var hotel_history = hotel_history %>
                         <% for (index in hotel_history){%>
