--- a/views/pages/accommodation.ejs
+++ b/views/pages/accommodation.ejs
@@ -44,15 +44,13 @@
                                         <h5 class="font-black" style="font-size: 50px;" id="title"><%= accommodations[index]['Title']%></h5>
                                         <p class="font-black" style="font-size: 20px;" id="content"><%= accommodations[index]['Description']%></p>
                                         <% var link = accommodations[index]['Link']%>
-                                        <!--Pls edit the card_state_location below to fetch map coordinates-->
-                                        <% var card_state_location = 'buttoncard_location'%>
                                         <% var card_state = 'buttoncard'%>
                                         <% if(!link){%>
                                             <% link = '#'%>
                                             <% card_state = 'disabled_buttoncard'%>
                                         <% } %>
                                         <div id="link-buttons">
-                                            <a href=<%= link%> target="_blank" class=<%= card_state_location%>>Check Location</a>
+                                            <a href="/find-place?lat=<%= accommodations[index]['Lat/Long']['0']%>&lng=<%= accommodations[index]['Lat/Long']['1']%>" target="_blank" class="buttoncard">Check Location</a>
                                             <input type = "hidden" name = "varId" id = "varId" value=<%= varId%>>
                                             <input type = "hidden" name = "Category" id = "Category" value ='Accommodations'>
                                             <a href=<%= link%> onclick="return saveRecent('<%- varId%>')" target="_blank" class=<%= card_state%>>Check Accommodation</a>
